# network-app

./: .gitignore  CMakeLists.txt  README.md  client.cpp  display.cpp  server.cpp
src/: ClientApp.cpp  ClientApp.hpp  DataProcessingServer.cpp  DataProcessingServer.hpp  DisplayServer.cpp  DisplayServer.hpp  NetworkHandler.cpp  NetworkHandler.hpp
tests/: network_test.cpp  processing_test.cpp
